tests/NormalTests/paczka1/small_fuzzy/99749570.err
Error in line 1: IpVdOC A990 28,92
Error in line 2: 3oPNEEoa A910 10,8
